Clean Up and Misc Bugfixes

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,26 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
     <item android:id="@+id/random"
-        android:title="Random Comic"
+        android:title="@string/randombutton"
         android:showAsAction="ifRoom"
         android:icon="@drawable/ic_action_shuffle"/>
     <item android:id="@+id/explain"
-        android:title="Explain"
+        android:title="@string/explainbutton"
         android:icon="@drawable/ic_action_help"
         android:showAsAction="ifRoom" />
     <item android:id="@+id/list"
-        android:title="Display As List"
+        android:title="@string/listbutton"
         android:showAsAction="never" />
     <item android:id="@+id/website"
-        android:title="Open In Browser"
+        android:title="@string/browserbutton"
         android:icon="@drawable/ic_action_web_site_light"
         android:showAsAction="never" />
     <item android:id="@+id/refresh"
-        android:title="Refresh"
+        android:title="@string/refreshbutton"
         android:icon="@drawable/ic_action_refresh"
         android:showAsAction="never" />
     <item android:id="@+id/share"
-        android:title="Share"
+        android:title="@string/sharebutton"
         android:icon="@drawable/ic_action_share"
         android:showAsAction="ifRoom" />
 
