--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
 
     <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView">
@@ -14,12 +11,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:text="\u00a9 2014  David Margolin
-            \n\nEmail\ntrickedoutdavid@gmail.com
-            \nGoogle+\nhttp://goo.gl/d8pHp0
-            \n\nLibraries Used:\nJsoup \nPicasso
-            \n\n    All brand and product names and associated logos contained within this application belong to their respective owners and are protected by copyright."
+            android:text="@string/abouttext"
             android:autoLink="web|email" />
     </ScrollView>
-
-</LinearLayout>
