--- a/app/src/main/res/layout/reader_fragment_layout.xml
+++ b/app/src/main/res/layout/reader_fragment_layout.xml
@@ -17,8 +17,7 @@
             android:id="@+id/linearLayout4"
             style="?android:buttonBarStyle"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/progressBar">
+            android:layout_alignParentStart="true">
 
             <Button
                 android:layout_width="wrap_content"
@@ -119,7 +118,6 @@
             android:maxLength="4"
             android:id="@+id/editText"
             android:gravity="center_vertical|center_horizontal"
-            android:textAlignment="center"
             android:singleLine="true"
             android:textStyle="bold"
             android:textColor="@color/White"
@@ -146,8 +144,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/editTexthold" />
+        android:layout_above="@+id/editTexthold"
+        android:layout_below="@+id/linearLayout5" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -160,15 +158,14 @@
         android:id="@+id/linearLayout5">
 
         <TextView
+            android:background="?attr/linearback"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:gravity="center_horizontal"
             android:textSize="18sp"
-            android:background="@color/DimGray"
             android:textColor="@color/White"
-            android:padding="4dp"
-            android:phoneNumber="false" />
+            android:padding="8dp" />
     </LinearLayout>
 
 
